# yargitay-karar-scraper

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: cli_usage.md  mcp_usage.md
examples/: basic_search.py  detailed_search.py  get_document.py
yargitay_karar_scraper/: __init__.py
yargitay_karar_scraper/cli/: main.py
yargitay_karar_scraper/mcp/: server.py
yargitay_karar_scraper/scraper/: __init__.py  client.py  models.py
